; ModuleID = '/home/carl/AnghaBench/linux/drivers/s390/cio/extr_qdio_main.c_qdio_siga_output.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/s390/cio/extr_qdio_main.c_qdio_siga_output.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qdio_q = type { %struct.TYPE_2__*, i32, i32 }
%struct.TYPE_2__ = type { i64, i32 }

@QDIO_SIGA_WRITE = common dso_local global i32 0, align 4
@QDIO_SIGA_WRITEQ = common dso_local global i32 0, align 4
@QDIO_SIGA_QEBSM_FLAG = common dso_local global i32 0, align 4
@QDIO_BUSY_BIT_PATIENCE = common dso_local global i64 0, align 8
@DBF_WARN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"%4x cc2 BB1:%1d\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"count:%u\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.qdio_q*, i32*, i64)* @qdio_siga_output to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @qdio_siga_output(%struct.qdio_q* %0, i32* %1, i64 %2) #0 {
  %4 = alloca %struct.qdio_q*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i64, align 8
  store %struct.qdio_q* %0, %struct.qdio_q** %4, align 8
  store i32* %1, i32** %5, align 8
  store i64 %2, i64* %6, align 8
  %13 = load %struct.qdio_q*, %struct.qdio_q** %4, align 8
  %14 = getelementptr inbounds %struct.qdio_q, %struct.qdio_q* %13, i32 0, i32 0
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 1
  %17 = bitcast i32* %16 to i64*
  %18 = load i64, i64* %17, align 8
  store i64 %18, i64* %7, align 8
  %19 = load i32, i32* @QDIO_SIGA_WRITE, align 4
  store i32 %19, i32* %8, align 4
  store i64 0, i64* %9, align 8
  store i32 0, i32* %10, align 4
  store i64 0, i64* %12, align 8
  %20 = load i64, i64* %6, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %3
  %23 = load i32, i32* @QDIO_SIGA_WRITEQ, align 4
  store i32 %23, i32* %8, align 4
  %24 = load i64, i64* %6, align 8
  store i64 %24, i64* %12, align 8
  br label %25

25:                                               ; preds = %22, %3
  %26 = load %struct.qdio_q*, %struct.qdio_q** %4, align 8
  %27 = call i64 @is_qebsm(%struct.qdio_q* %26)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %38

29:                                               ; preds = %25
  %30 = load %struct.qdio_q*, %struct.qdio_q** %4, align 8
  %31 = getelementptr inbounds %struct.qdio_q, %struct.qdio_q* %30, i32 0, i32 0
  %32 = load %struct.TYPE_2__*, %struct.TYPE_2__** %31, align 8
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 0
  %34 = load i64, i64* %33, align 8
  store i64 %34, i64* %7, align 8
  %35 = load i32, i32* @QDIO_SIGA_QEBSM_FLAG, align 4
  %36 = load i32, i32* %8, align 4
  %37 = or i32 %36, %35
  store i32 %37, i32* %8, align 4
  br label %38

38:                                               ; preds = %29, %25
  br label %39

39:                                               ; preds = %65, %57, %38
  %40 = load i64, i64* %7, align 8
  %41 = load %struct.qdio_q*, %struct.qdio_q** %4, align 8
  %42 = getelementptr inbounds %struct.qdio_q, %struct.qdio_q* %41, i32 0, i32 2
  %43 = load i32, i32* %42, align 4
  %44 = load i32*, i32** %5, align 8
  %45 = load i32, i32* %8, align 4
  %46 = load i64, i64* %12, align 8
  %47 = call i32 @do_siga_output(i64 %40, i32 %43, i32* %44, i32 %45, i64 %46)
  store i32 %47, i32* %11, align 4
  %48 = load i32*, i32** %5, align 8
  %49 = load i32, i32* %48, align 4
  %50 = call i64 @unlikely(i32 %49)
  %51 = icmp ne i64 %50, 0
  br i1 %51, label %52, label %67

52:                                               ; preds = %39
  %53 = load i32, i32* %10, align 4
  %54 = add nsw i32 %53, 1
  store i32 %54, i32* %10, align 4
  %55 = load i64, i64* %9, align 8
  %56 = icmp ne i64 %55, 0
  br i1 %56, label %59, label %57

57:                                               ; preds = %52
  %58 = call i64 (...) @get_tod_clock_fast()
  store i64 %58, i64* %9, align 8
  br label %39

59:                                               ; preds = %52
  %60 = call i64 (...) @get_tod_clock_fast()
  %61 = load i64, i64* %9, align 8
  %62 = sub nsw i64 %60, %61
  %63 = load i64, i64* @QDIO_BUSY_BIT_PATIENCE, align 8
  %64 = icmp slt i64 %62, %63
  br i1 %64, label %65, label %66

65:                                               ; preds = %59
  br label %39

66:                                               ; preds = %59
  br label %67

67:                                               ; preds = %66, %39
  %68 = load i32, i32* %10, align 4
  %69 = icmp ne i32 %68, 0
  br i1 %69, label %70, label %87

70:                                               ; preds = %67
  %71 = load i32, i32* @DBF_WARN, align 4
  %72 = load %struct.qdio_q*, %struct.qdio_q** %4, align 8
  %73 = getelementptr inbounds %struct.qdio_q, %struct.qdio_q* %72, i32 0, i32 0
  %74 = load %struct.TYPE_2__*, %struct.TYPE_2__** %73, align 8
  %75 = load %struct.qdio_q*, %struct.qdio_q** %4, align 8
  %76 = call i32 @SCH_NO(%struct.qdio_q* %75)
  %77 = load %struct.qdio_q*, %struct.qdio_q** %4, align 8
  %78 = getelementptr inbounds %struct.qdio_q, %struct.qdio_q* %77, i32 0, i32 1
  %79 = load i32, i32* %78, align 8
  %80 = call i32 (i32, %struct.TYPE_2__*, i8*, i32, ...) @DBF_DEV_EVENT(i32 %71, %struct.TYPE_2__* %74, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 %76, i32 %79)
  %81 = load i32, i32* @DBF_WARN, align 4
  %82 = load %struct.qdio_q*, %struct.qdio_q** %4, align 8
  %83 = getelementptr inbounds %struct.qdio_q, %struct.qdio_q* %82, i32 0, i32 0
  %84 = load %struct.TYPE_2__*, %struct.TYPE_2__** %83, align 8
  %85 = load i32, i32* %10, align 4
  %86 = call i32 (i32, %struct.TYPE_2__*, i8*, i32, ...) @DBF_DEV_EVENT(i32 %81, %struct.TYPE_2__* %84, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i32 %85)
  br label %87

87:                                               ; preds = %70, %67
  %88 = load i32, i32* %11, align 4
  ret i32 %88
}

declare dso_local i64 @is_qebsm(%struct.qdio_q*) #1

declare dso_local i32 @do_siga_output(i64, i32, i32*, i32, i64) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i64 @get_tod_clock_fast(...) #1

declare dso_local i32 @DBF_DEV_EVENT(i32, %struct.TYPE_2__*, i8*, i32, ...) #1

declare dso_local i32 @SCH_NO(%struct.qdio_q*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
